--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1 @@
-html, body{height:100%;width:100%}body{background-color:#EEE;color:#333}section{font-family:sans;font-size:12px;padding-left:60px;padding-top:100px;width:450px}h1{font-size:16px;font-variant:small-caps}p{line-height:1.5em;text-align:justify}
+html, body{height:100%;width:100%;margin:0;padding:0}body{background-color:#EEE;color:#333}section{font-family:sans;font-size:12px;padding-left:60px;padding-top:100px;width:450px}h1{font-size:16px;font-variant:small-caps}p{line-height:1.5em;text-align:justify}
