--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,34 @@
-html, body{height:100%;width:100%;margin:0;padding:0}body{background-color:#EEE;color:#333}section{font-family:sans;font-size:12px;padding-left:60px;padding-top:100px;width:450px}h1{font-size:16px;font-variant:small-caps}p{line-height:1.5em;text-align:justify}
+html, body {
+	height:100%;
+	width:100%;
+	margin:0;
+	padding:0;
+}
+body {
+	position: absolute;
+	background: #090935;
+	background: -moz-linear-gradient(top, #090935 0%, #000000 100%);
+	background: -webkit-linear-gradient(top, #090935 0%,#000000 100%);
+	background: linear-gradient(to bottom, #090935 0%,#000000 100%);
+	color:#405070;
+}
+div#f36eb40 {
+	position: absolute;
+	bottom: 20px;
+	left: 50%;
+	
+}
+section#ac6876b {
+	font-family: sans;
+	width: 450px;
+	margin: 0px auto;
+	text-align: center;
+	position: relative;
+	left: -50%;
+}
+h1 {
+	font-size:16px;
+	font-variant:all-small-caps;
+	margin: 0;
+}
+
