--- a/css/main.css
+++ b/css/main.css
@@ -1,34 +1,64 @@
-html, body {
-	height:100%;
-	width:100%;
-	margin:0;
-	padding:0;
-}
+/*
+  https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries
+*/
+
 body {
-	position: absolute;
-	background: #090935;
-	background: -moz-linear-gradient(top, #090935 0%, #000000 100%);
-	background: -webkit-linear-gradient(top, #090935 0%,#000000 100%);
-	background: linear-gradient(to bottom, #090935 0%,#000000 100%);
-	color:#405070;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	/* align-items: center; */
+	color: #555;
+	background-color: #fcfcfc;
 }
-div#f36eb40 {
-	position: absolute;
-	bottom: 20px;
-	left: 50%;
-	
+
+abbr {
+	font-variant: none;
+	text-decoration: none;
+	border-bottom: 1px dotted;
+	cursor: help;
 }
-section#ac6876b {
-	font-family: sans;
-	width: 450px;
-	margin: 0px auto;
-	text-align: center;
-	position: relative;
-	left: -50%;
+
+#container {
+	display: grid;
+	grid-template-columns: 300px 600px;
+	grid-template-rows: 300px;
+	grid-gap: 50px;
+	margin-top: 80px;
 }
-h1 {
-	font-size:16px;
-	font-variant:all-small-caps;
-	margin: 0;
+
+#portrait {
+}
+
+#portrait canvas, #portrait img {	
+	border-radius: 150px;
+}
+
+#intro p {
+	font-family: sans-serif;
+	font-size: 14px;
+	line-height: 1.5em;
+	text-align: justify;
+}
+
+#intro h1 {
+	font-family: 'Merriweather', serif;
+	font-size: 65px;
+	font-variant: small-caps;
+	margin: 0.1em 0 0.2em 0;
+}
+
+#intro #fullname {
+	font-weight: bold;
+}
+
+#intro nav {
+	margin-top: 1.7em;
+}
+
+#intro nav a {
+	font-size: 2em;
+	color: inherit;
+	text-decoration: none;
+	margin-right: 0.2em;
 }
 
