--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,6 @@ abbr {
 	font-family: sans-serif;
 	font-size: 14px;
 	line-height: 1.5em;
-	text-align: justify;
 }
 
 #intro h1 {
@@ -60,5 +59,9 @@ abbr {
 	color: inherit;
 	text-decoration: none;
 	margin-right: 0.2em;
+}
+
+#intro nav a:hover, #intro nav a:active, #intro nav a:focus {
+	color: #38c;
 }
 
